[gd_scene load_steps=7 format=3 uid="uid://dkuvjgsgfd3xb"]

[ext_resource type="Script" uid="uid://c4pbxw5b7p6mp" path="res://Scenes/Menus/menus.gd" id="1_goel8"]
[ext_resource type="Texture2D" uid="uid://c6s8grqyujcfm" path="res://Assets/Images/HighScore.png" id="2_drhv0"]
[ext_resource type="Texture2D" uid="uid://bw2alwiyilf08" path="res://Assets/Images/mainmenu.png" id="2_mfmg2"]
[ext_resource type="Texture2D" uid="uid://dytofeti58lu2" path="res://Assets/Images/settings.png" id="3_nn8fo"]
[ext_resource type="Texture2D" uid="uid://b5ps7x4l4s3ep" path="res://Assets/Images/Credits.png" id="5_v8xre"]

[sub_resource type="LabelSettings" id="LabelSettings_goel8"]
font_size = 62

[node name="Menus" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_goel8")

[node name="MainMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
layout_mode = 0
offset_right = 600.0
offset_bottom = 1007.0
texture = ExtResource("2_mfmg2")

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu"]
layout_mode = 0
offset_right = 599.0
offset_bottom = 200.0
alignment = 1

[node name="GameTitle" type="Label" parent="MainMenu/HBoxContainer"]
layout_mode = 2
text = "Color Waves"
label_settings = SubResource("LabelSettings_goel8")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.25
offset_top = -107.25
offset_right = 169.25
offset_bottom = 107.25
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Play Game"

[node name="SettingsButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Settings"

[node name="HighScoresButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "High Scores"

[node name="Credits" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Credits"

[node name="SettingsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="SettingsMenu"]
layout_mode = 0
offset_right = 601.0
offset_bottom = 1007.0
texture = ExtResource("3_nn8fo")

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
layout_mode = 0
offset_left = 432.0
offset_top = 427.0
offset_right = 452.0
offset_bottom = 447.0
color = Color(1, 1, 1, 0.5294118)

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsMenu"]
layout_mode = 0
offset_right = 600.0
offset_bottom = 200.0
alignment = 1

[node name="SettingsLabel" type="Label" parent="SettingsMenu/HBoxContainer2"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_goel8")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu"]
layout_mode = 0
offset_right = 600.0
offset_bottom = 800.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/HBoxContainer"]
custom_minimum_size = Vector2(600, 800)
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Master" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/VBoxContainer/Master"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="SettingsMenu/HBoxContainer/VBoxContainer/Master"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
min_value = -50.0
max_value = 0.0
tick_count = 20

[node name="Value" type="Label" parent="SettingsMenu/HBoxContainer/VBoxContainer/Master"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "100%"

[node name="Music" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/VBoxContainer/Music"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="SettingsMenu/HBoxContainer/VBoxContainer/Music"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
min_value = -50.0
max_value = 0.0
tick_count = 20

[node name="Value" type="Label" parent="SettingsMenu/HBoxContainer/VBoxContainer/Music"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "100%"

[node name="SFX" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/VBoxContainer/SFX"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="SettingsMenu/HBoxContainer/VBoxContainer/SFX"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
min_value = -50.0
max_value = 0.0
tick_count = 20

[node name="Value" type="Label" parent="SettingsMenu/HBoxContainer/VBoxContainer/SFX"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "100%"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Disable Powerup popups"

[node name="CheckBox" type="CheckBox" parent="SettingsMenu/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="BackButton" type="Button" parent="SettingsMenu/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Back"

[node name="HighScoresMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -600.0
offset_bottom = -800.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HighScoresMenu"]
layout_mode = 0
offset_right = 601.0
offset_bottom = 1010.0
texture = ExtResource("2_drhv0")

[node name="VBoxContainer" type="VBoxContainer" parent="HighScoresMenu"]
layout_mode = 0
offset_top = 100.0
offset_right = 600.0
offset_bottom = 700.0
theme_override_constants/separation = 60

[node name="HBoxContainer" type="HBoxContainer" parent="HighScoresMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 291

[node name="Scores1" type="VBoxContainer" parent="HighScoresMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Scores2" type="VBoxContainer" parent="HighScoresMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton2" type="Button" parent="HighScoresMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Back"

[node name="HBoxContainer2" type="HBoxContainer" parent="HighScoresMenu"]
layout_mode = 0
offset_right = 600.0
offset_bottom = 100.0
alignment = 1

[node name="HighScoresLabel" type="Label" parent="HighScoresMenu/HBoxContainer2"]
layout_mode = 2
text = "High Scores"
label_settings = SubResource("LabelSettings_goel8")
horizontal_alignment = 1

[node name="CreditsMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="CreditsMenu"]
layout_mode = 0
offset_left = -60.0
offset_right = 623.0
offset_bottom = 805.0
texture = ExtResource("5_v8xre")

[node name="HBoxContainer" type="HBoxContainer" parent="CreditsMenu"]
layout_mode = 0
offset_left = -60.0
offset_top = 148.0
offset_right = 622.0
offset_bottom = 683.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsMenu/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CreditsMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music:"

[node name="Label2" type="Label" parent="CreditsMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Owen Levin"

[node name="Label3" type="Label" parent="CreditsMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Code"

[node name="Label4" type="Label" parent="CreditsMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Owen Levin
Parker nalchajian
troy lonie"

[node name="Label5" type="Label" parent="CreditsMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Beta Tester High score"

[node name="Label6" type="Label" parent="CreditsMenu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Horchata - 1925200"

[node name="BackButton" type="Button" parent="CreditsMenu/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Back"

[connection signal="pressed" from="MainMenu/VBoxContainer/PlayButton" to="." method="handle_start_game"]
[connection signal="pressed" from="MainMenu/VBoxContainer/SettingsButton" to="." method="handle_settings_press"]
[connection signal="pressed" from="MainMenu/VBoxContainer/HighScoresButton" to="." method="handle_high_scores_press"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="value_changed" from="SettingsMenu/HBoxContainer/VBoxContainer/Master/HSlider" to="." method="_on_master_slider_drag_ended"]
[connection signal="value_changed" from="SettingsMenu/HBoxContainer/VBoxContainer/Music/HSlider" to="." method="_on_music_slider_changed"]
[connection signal="value_changed" from="SettingsMenu/HBoxContainer/VBoxContainer/SFX/HSlider" to="." method="_on_sfx_slider_changed"]
[connection signal="toggled" from="SettingsMenu/HBoxContainer/VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="SettingsMenu/HBoxContainer/VBoxContainer/BackButton" to="." method="handle_menu_press"]
[connection signal="pressed" from="HighScoresMenu/VBoxContainer/BackButton2" to="." method="handle_menu_press"]
[connection signal="pressed" from="CreditsMenu/HBoxContainer/VBoxContainer/BackButton" to="." method="handle_menu_press"]
